2000-02-02  George Staikos <staikos@0wned.org> (KMail-1.1.35)
	Mail Sending
	* External editor support
	* Confirm before send
	* Attach custom mime headers

	POP3
	* Settings entry for the POP3 timer

	Security
	* Changed tpmnam to mkstemp

	General
	* New mail received notification
	* Sigfile editor

2000-02-02  Jacek Stolarczyk <jacek@mer.chemia.polsl.gliwice.pl>
        Settings 
        * Ported createPushButton, createLabeledEntry and addLabeledWidget
          from char* to QString&. It was causing problems for passing
          already internationalized strings. In cPB i18n() was unnecessarily
          called for the second time.

1999-12-15  Don Sanders  <sanders@kde.org> (KMail-1.1.32)

        General
        * Cache number of unread messages
        * Added auto synchronization logic for correcting count of unread 
	  messages.
        * Added support for customizing colors in all three panes. (Currently 
	  have to restart kmail for this to take effect due to HTML widget 
	  renovations).
        * Added support for customizing fonts and font sizes in all three 
	  panes. (Currently have to restart kmail for this to take effect due 
	  to HTML widget renovations). Fixed width fonts starting working too.
	* Ported all the changes made to KMail 1.0.x.
	* Ported KMail to QT 2.1 and KDE 2 kdelibs (that is it runs and works
	  now rather than just compiling)

        Privacy
        * Committed patch by "J. Nick Koston" <bdraco@darkorb.net> to add 
	  support for GNU Privacy Guard.

        Filter Dialog
        * Various buttons are enabled/disabled depending on whether they can
          be used.
        * Filter title is updated as the user enters filter details
        * Fix a bug where changes could be lost when changing priority of 
	  new filter.
        * List of folders supports nested folders by indentation.

        Folder Tree Window
        * Nested folder support.
        * Improved DnD support (hover opening, auto scrolling, highlight