@@ -1,3 +1,10 @@
+2000-02-28  Mario Weilguni <mario@weilguni.net>
+
+	* Corrected wrong shortcut in menu "File/&Filter"
+	* Added mini-icon to several subwindows of kmail
+	* Removed those ugly password dialogs with some
+	  more modern and style one.
+
 2000-02-02  George Staikos <staikos@0wned.org> (KMail-1.1.35)
 	Mail Sending
 	* External editor support
